# ScuffedMC

./: CMakeLists.txt  README.md
inc/: config.h.in  cylinder.hpp  halfspace.hpp  particle.hpp  plane.hpp  sphere.hpp  surface.hpp
src/: cylinder.cpp  halfspace.cpp  main.cpp  particle.cpp  plane.cpp  sphere.cpp
